--- a/apps/interview/src/app/styles.css
+++ b/apps/interview/src/app/styles.css
@@ -11,11 +11,11 @@
 
 @utility container {
   margin-inline: auto;
-  padding-inline: 2rem;
+  padding-inline: --theme(--spacing-8);
   @media (width >= --theme(--breakpoint-sm)) {
     max-width: none;
   }
-  @media (width >= 1400px) {
+  @media (width >= --theme(--breakpoint-2xl)) {
     max-width: 1400px;
   }
 }
