--- a/tooling/tailwind/theme.css
+++ b/tooling/tailwind/theme.css
@@ -79,7 +79,7 @@
   --chart-3: oklch(0.5 0.2 240);
   --chart-4: oklch(0.4 0.18 240);
   --chart-5: oklch(0.3 0.15 240);
-  --sidebar: oklch(0.985 0 0);
+  --sidebar: lab(96.1486% .269413 -.982153);;
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: oklch(0.985 0 0);
