--- a/tooling/tailwind/theme.css
+++ b/tooling/tailwind/theme.css
@@ -87,6 +87,7 @@
   --sidebar-border: hsl(220 13% 91%);
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
   --header-height: calc(var(--spacing) * 14);
+  --content-padding: calc(var(--spacing) * 4);
 }
 
 .dark {
